# perfscale

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  UPCOMING.md
.github/workflows/: bench.yml  ci.yml  release.yml
crates/perfscale-cli/: Cargo.toml
crates/perfscale-cli/src/: cli.rs  error.rs  main.rs  update.rs
crates/perfscale-cli/src/commands/: bench.rs  lint.rs  mod.rs  run.rs  schema.rs  self_update.rs  serve.rs
crates/perfscale-cli/tests/: cli.rs  e2e_workflows.rs  self_update.rs
crates/perfscale-core/: Cargo.toml  build.rs
crates/perfscale-core/benches/: engine.rs
crates/perfscale-core/examples/: gen_schema.rs  grpc_echo_server.rs
crates/perfscale-core/proto/: echo.proto
crates/perfscale-core/src/: generate.rs  lib.rs  lint.rs  models.rs  schema.rs  summary.rs  testsupport.rs  yaml.rs
crates/perfscale-core/src/runner/: k6.rs  locust.rs  mod.rs
crates/perfscale-core/src/step/: actions.rs  context.rs  grpc.rs  mod.rs  resources.rs  runner.rs  ws.rs
crates/perfscale-core/tests/: end_to_end.rs
docker/: dev.Dockerfile  release.Dockerfile
docs/: README.md  benchmarks.md  getting-started.md  mcp.md  yaml-reference.md
docs/cli/: commands.md  examples.md
docs/core/: actions.md  architecture.md  grpc.md  runners.md  websocket.md
examples/: grpc.test.yaml  raw-net.test.yaml  websocket.test.yaml  with-setup.config.yaml  with-setup.test.yaml
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .vocab.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-07/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-08/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-09/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-10/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-11/: GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-13/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-16/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
npm/: build-npm-packages.mjs
rfcs/: 001-sdk.md  002-marketplace.md  003-composite-step.md  004-setup-teardown.md  README.md
schema/: config.schema.json  test.schema.json
scripts/: bench.sh  bench_compare.py  bench_metrics.py
