[package]
name = "perfscale-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "perfscale — CLI for running k6, locust, and native load tests"

[[bin]]
name = "perfscale"
path = "src/main.rs"

[dependencies]
perfscale-core = { path = "../perfscale-core" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "process"] }
axum = "0.7"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# System info for `perfscale bench` reports (OS/CPU/RAM/swap)
sysinfo  = "0.33"
tempfile = "3"

[dev-dependencies]
assert_cmd    = "2"
predicates    = "3"
tempfile      = "3"
wiremock      = "0.6"
tower         = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = { version = "3", features = ["file_locks"] }
