[package]
name = "perfscale-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic load-testing engine for perfscale: k6/locust runners, native step engine, YAML test/config parsing"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid       = { version = "1", features = ["serde", "v4"] }

# Async runtime + subprocess management (k6, locust). `net` powers the raw
# transport actions (std/tcp@v1, std/udp@v1).
tokio = { version = "1", features = ["time", "sync", "rt", "macros", "process", "io-util", "fs", "net"] }

# HTTP client for std/http@v1
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }

# CSV parsing for locust's --csv stats output
csv = "1"

# Fixed-size latency histogram for the native engine (no serialization/sync
# features — just the core data structure)
hdrhistogram = { version = "7", default-features = false }

# `std/file@v1` binary content encoding
base64 = "0.22"

# YAML/JSON schema generation + validation
schemars   = "0.8"
jsonschema = "0.18"

tracing = "0.1"
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"
futures-util = { version = "0.3.32", default-features = false, features = ["sink"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile   = "3"
wiremock   = "0.6"
serial_test = { version = "3", features = ["file_locks"] }
criterion  = { version = "0.5", default-features = false }
rcgen = "0.13"

[[bench]]
name = "engine"
harness = false
