[package]
name = "perfscale-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic load-testing engine for perfscale: k6/locust runners, native step engine, YAML test/config parsing"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid       = { version = "1", features = ["serde", "v4"] }

# Async runtime + subprocess management (k6, locust). `net` powers the raw
# transport actions (std/tcp@v1, std/udp@v1).
tokio = { version = "1", features = ["time", "sync", "rt", "macros", "process", "io-util", "fs", "net"] }

# HTTP client for std/http@v1
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }

# CSV parsing for locust's --csv stats output
csv = "1"

# Fixed-size latency histogram for the native engine (no serialization/sync
# features — just the core data structure)
hdrhistogram = { version = "7", default-features = false }

# `std/file@v1` binary content encoding
base64 = "0.22"

# YAML/JSON schema generation + validation
schemars   = "0.8"
jsonschema = "0.18"

tracing = "0.1"
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"
futures-util = { version = "0.3.32", default-features = false, features = ["sink"] }

# gRPC client for the `std/grpc*@v1` action family. Dynamic calls only — the
# message schema arrives at run time (`descriptor_set` / server reflection),
# so no codegen/prost features of tonic are needed. TLS stays on rustls/ring
# with webpki roots, matching the WebSocket family. 0.14.6 is the floor:
# `Endpoint::tls_config_with_verifier` (used for `skipTLSVerify`) was added
# in that release.
tonic = { version = "0.14.6", default-features = false, features = ["channel", "tls-ring", "tls-webpki-roots"] }
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", default-features = false, features = ["serde"] }
# Client-only (server reflection protocol for `reflection: true`); the test
# server pulls the default `server` feature back in as a dev-dependency.
tonic-reflection = { version = "0.14.6", default-features = false }
tokio-stream = "0.1"
# URI types for dynamic call paths (tonic's re-export sits behind its
# `codegen` feature, which dynamic calls don't need).
http = "1"

[build-dependencies]
# Compiles proto/echo.proto for the in-crate gRPC test server (used only by
# tests, but build scripts cannot be dev-only). Pure Rust — `protox` replaces
# the `protoc` binary so downstream consumers (git dependency, Docker/CI
# images without protoc) build unchanged.
protox = "0.9"
prost = "0.14"
tonic-prost-build = "0.14.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile   = "3"
wiremock   = "0.6"
serial_test = { version = "3", features = ["file_locks"] }
criterion  = { version = "0.5", default-features = false }
rcgen = "0.13"
# Test gRPC server (unary + all streaming shapes + reflection).
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"
tonic-reflection = "0.14.6"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bench]]
name = "engine"
harness = false
